<resources>
    <string name="app_name">Elayna</string>
    <string name="edit_profile_information">Edit profile information</string>
    <string name="profile_information">Profile Information</string>
    <string name="address">Address</string>
    <string name="language">Language</string>
    <string name="private_policy">Private Policy</string>
    <string name="exit">Exit</string>
    <string name="main">Main</string>
    <string name="search">Search</string>
    <string name="accessory">Accessory</string>
    <string name="profile">Profile</string>
    <string name="point_your_phone_down" />
    <string name="all">All</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="shoe">Shoe</string>
    <string name="winter">Winter</string>
    <string name="place_clothing">Place Clothing</string>
    <string name="Menu" />
    <string name="menu">Menu</string>
    <string name="favourites">Favourites</string>
</resources>